--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  shared_preferences: ^2.0.9
+  sqflite: ^2.0.0+4
+  path_provider: ^2.0.11
+
 
 
   # The following adds the Cupertino Icons font to your application.
